--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,3 +15,5 @@
 @import './FormTodayThanks.css';
 @import './FormProfile.css';
 @import './CardEmotion.css';
+@import './EmotionCalendar.css';
+@import './CalendarDate.css';
