--- a/src/styles/FormToday1.css
+++ b/src/styles/FormToday1.css
@@ -14,22 +14,22 @@
 }
 
 /* HIDE RADIO
-[type="radio"] {
+/* [type="radio"] {
   position: absolute;
   opacity: 0;
   width: 0;
   height: 0;
-} */
+} */ */
 
 /* IMAGE STYLES */
-/* [type="radio"] + img {
+[type="radio"] + img {
   cursor: pointer;
-} */
+}
 
 /* CHECKED STYLES */
-/* [type="radio"]:checked + img {
+[type="radio"]:checked + img {
   outline: 2px solid #f00;
-} */
+}
 
 #FormToday1 #allEmotions {
   display: grid;
