--- a/src/styles/Buttons.css
+++ b/src/styles/Buttons.css
@@ -61,6 +61,7 @@ button {
   border-radius: 50%;
   color: white;
   box-shadow: none;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
   font-weight:100;
   font-size:1rem;
   padding:2vh;
