--- a/src/styles/EmotionCalendar.css
+++ b/src/styles/EmotionCalendar.css
@@ -1,3 +1,11 @@
 #EmotionCalendar{
     list-style:none;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
+
+#EmotionCalendar #buttonLink {
+    text-align:center;
+    margin-top:5vh;
 }
